--- a/app/src/main/res/layout/fragment_news_tab.xml
+++ b/app/src/main/res/layout/fragment_news_tab.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/AppTheme.AppBarOverlay"
-            app:tabTextColor="@color/gray"></android.support.design.widget.TabLayout>
+            app:tabTextColor="@color/gray"/>
 
         <ImageView
             android:id="@+id/add_channel_iv"
@@ -35,7 +35,7 @@
             android:paddingRight="10dp"
             android:paddingTop="4dp"
             android:scaleType="center"
-            app:srcCompat="@drawable/ic_add_white_24dp"
+            android:src="@drawable/ic_add_white_24dp"
             tools:ignore="ContentDescription" />
     </LinearLayout>
 
@@ -44,6 +44,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:layout="@layout/fragment_list"></android.support.v4.view.ViewPager>
+        tools:layout="@layout/fragment_list"/>
 
 </LinearLayout>
