studio from 2.2.3 to 3.0

--- a/app/src/main/res/layout/fragment_news_tab.xml
+++ b/app/src/main/res/layout/fragment_news_tab.xml
@@ -35,7 +35,7 @@
             android:paddingRight="10dp"
             android:paddingTop="4dp"
             android:scaleType="center"
-            android:src="@drawable/ic_add_white_24dp"
+            app:srcCompat="@drawable/ic_add_white_24dp"
             tools:ignore="ContentDescription" />
     </LinearLayout>
 
