--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -19,7 +19,7 @@
             android:fadeScrollbars="true"
             android:scrollbarFadeDuration="1"
             android:scrollbars="vertical"
-            app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>
+            app:layoutManager="LinearLayoutManager"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
