--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="168dp"
-    android:background="@mipmap/error_image"
+    android:background="?attr/colorPrimary"
     android:clickable="true"
     android:foreground="?attr/selectableItemBackground"
     android:gravity="bottom"
