--- a/app/src/main/res/layout/item_article_list.xml
+++ b/app/src/main/res/layout/item_article_list.xml
@@ -5,7 +5,8 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
+    android:clickable="true"
+    android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="@color/viewBackground"
     app:cardElevation="1dp">
 
