--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -8,8 +8,8 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <com.cxz.recyclerview.PullLoadMoreRecyclerView
-        android:id="@+id/pullLoadMoreRecyclerView"
+    <com.cxz.xrecyclerview.XRecyclerView
+        android:id="@+id/xRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
