--- a/app/src/main/res/layout/item_article_list_text.xml
+++ b/app/src/main/res/layout/item_article_list_text.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:id="@+id/content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="vertical">
