--- a/app/src/main/res/layout/item_article_list_video.xml
+++ b/app/src/main/res/layout/item_article_list_video.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:id="@+id/content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="vertical">
@@ -33,7 +33,7 @@
             <ImageView
                 android:id="@+id/iv_content"
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_height="200dp"
                 android:layout_marginTop="4dp" />
 
         </LinearLayout>
