--- a/app/src/main/res/layout/item_article_list_images.xml
+++ b/app/src/main/res/layout/item_article_list_images.xml
@@ -19,27 +19,33 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:textStyle="bold" />
 
-            <com.lzy.ninegrid.NineGridView
-                android:id="@+id/nineGrid"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                app:ngv_gridSpacing="3dp"
-                app:ngv_maxSize="3"
-                app:ngv_mode="fill"
-                app:ngv_singleImageRatio="1"
-                app:ngv_singleImageSize="200dp"/>
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="120dp"
+                android:layout_height="80dp"
+                android:scaleType="fitXY"/>
+
+            <!--<com.lzy.ninegrid.NineGridView-->
+            <!--android:id="@+id/nineGrid"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="4dp"-->
+            <!--app:ngv_gridSpacing="3dp"-->
+            <!--app:ngv_maxSize="3"-->
+            <!--app:ngv_mode="fill"-->
+            <!--app:ngv_singleImageRatio="1"-->
+            <!--app:ngv_singleImageSize="200dp"/>-->
 
         </LinearLayout>
 
