--- a/app/src/main/res/layout/item_article_list_video.xml
+++ b/app/src/main/res/layout/item_article_list_video.xml
@@ -34,7 +34,8 @@
                 android:id="@+id/iv_content"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_marginTop="4dp" />
+                android:layout_marginTop="4dp"
+                android:scaleType="fitXY" />
 
         </LinearLayout>
 
